# chatbox1

./: pyproject.toml  streamlit_app.py
faiss_index/: doc_map.json  index.faiss  index.pkl
